First section almost done in home page

--- a/style/index.css
+++ b/style/index.css
@@ -42,3 +42,15 @@ body{
     color: white;
     transition: 0.3s;
 }
+
+.home-figure{
+    padding-top: 90px;
+    padding-left: 50px
+}
+
+.center-items{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: left;
+}
