--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -15,14 +15,14 @@
         <img src="logo.svg" width="200">
         <div class="card-form m-4">
             <h1>Acesse sua conta Toro</h1>
-            <form>
+            <form action="/sigin/auth" method="POST">
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">E-mail:</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label class="form-label">E-mail:</label>
+                  <input type="email" class="form-control" id="email">
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Senha:</label>
-                  <input type="password" class="form-control" maxlength="16" id="exampleInputPassword1">
+                  <label class="form-label">Senha:</label>
+                  <input type="password" class="form-control" maxlength="16" id="password">
                   <a href="#" class="mt-3">Esqueceu a senha?</a>
                 </div>
                 <button type="submit" class="button-purple">Entrar</button>
