--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,19 +18,19 @@
             <form action="/register/auth" method="POST">
                 <div class="mb-3">
                     <label class="form-label">Nome completo:</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" name="name">
                   </div>
                 <div class="mb-3">
                   <label class="form-label">E-mail:</label>
-                  <input type="email" class="form-control" id="email">
+                  <input type="email" class="form-control" name="email">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">CPF:</label>
-                    <input type="tel" class="form-control" id="password">
+                    <input type="tel" class="form-control" name="cpf">
                   </div>
                 <div class="mb-3">
                   <label class="form-label">Senha (6 a 16 caracteres):</label>
-                  <input type="password" class="form-control" maxlength="16" id="password">
+                  <input type="password" class="form-control" maxlength="16" name="password">
                 </div>
                 <button type="submit" class="button-purple">Continue</button>
               </form>
