ending the projetct

--- a/style/register.css
+++ b/style/register.css
@@ -34,9 +34,11 @@ input:hover{
     font-weight: 400;
     font-size: 18px;
     width: fit-content;
+    text-decoration: none;
 }
 
 .button-purple:hover{
     background-color: rgb(69, 33, 133);
     transition: 0.3s;
+    color: white;
 }
