--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                 <a class="navbar-brand navbar-item" href="#">AJUDA</a>
             </div>
             <div class="colum">
-                <a class="button-outline-purple" type="button" href="http://localhost:3456/signup">Entrar</a>
+                <a class="button-outline-purple" type="button" href="http://localhost:3456/login">Entrar</a>
                 <a class="button-outline-purple" type="button" href="http://localhost:3456/register">Cadastre-se</a>
             </div>
         </nav>
