--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,14 +15,14 @@
         <img src="logo.svg" width="200">
         <div class="card-form m-4">
             <h1>Acesse sua conta Toro</h1>
-            <form action="/sigin/auth" method="POST">
+            <form action="/login/auth" method="POST">
                 <div class="mb-3">
                   <label class="form-label">E-mail:</label>
-                  <input type="email" class="form-control" id="email">
+                  <input type="email" class="form-control" name="email">
                 </div>
                 <div class="mb-3">
                   <label class="form-label">Senha:</label>
-                  <input type="password" class="form-control" maxlength="16" id="password">
+                  <input type="password" class="form-control" maxlength="16" name="password">
                   <a href="#" class="mt-3">Esqueceu a senha?</a>
                 </div>
                 <button type="submit" class="button-purple">Entrar</button>
