--- a/views/login_error.ejs
+++ b/views/login_error.ejs
@@ -13,7 +13,7 @@
     <div class="d-flex flex-column justify-content-center align-items-center h-100">
         <img src="/logo.svg" width="200">
         <div class="card-form m-4">
-        <h1>Sua conta foi criada com sucesso!</h1>
+        <h1>Não foi possivel realizar o login</h1>
         <a href="http://localhost:3456/" class="button-purple">Voltar a pagina inicial</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
