--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se | Toro investimentos</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="/register.css">
 </head>
 <body>
   <a class="fixed-top m-5" href="http://localhost:3456/">&#8592; Ir para site</a>
     <div class="d-flex flex-column justify-content-center align-items-center h-100">
-        <img src="logo.svg" width="200">
+        <img src="/logo.svg" width="200">
         <div class="card-form m-4">
             <h1>Cadastre-se grátis para investir</h1>
             <form action="/register/auth" method="POST">
+              <% for(let i = 0; i < errors.length; i++) { %>
+                <p class="alert alert-danger"><%= errors[i].texto %></p>
+              <% } %>
                 <div class="mb-3">
                     <label class="form-label">Nome completo:</label>
                     <input type="text" class="form-control" name="name">
